--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <img src="me.jpg" alt="">
-<h1>Alex Quiroz</h1>
+<h1>Alex &#128529; Quiroz</h1>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, esse?</p>
 
@@ -30,6 +30,12 @@
     <li>drawing</li>
     <li>engineering</li>
 </ol>
+
+<h2>origin story</h2>
+<p>I was an idiot throughout school always doodling and making weird stuff until eventuallly got into college able to use my odd creations in engineering but was unable to apply the technical skills of math and science so i switched over to design and continued to be an idiot but a creative idiot</p>
+
+<h2>super power</h2>
+<p>The power to confuse anyone I come into contact with</p>
 
 </body>
 </html>
