--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<main>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,17 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Quiroz</title>
 
-<style>
 
-    body{
-        background: #1fddc7;
-    }
-
-</style>
-
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+
+<main>
 <img src="me.jpg" alt="">
 <h1>Alex &#128529; Quiroz</h1>
 
@@ -37,7 +34,8 @@
 
 <h2>super power</h2>
 <p>The power to confuse anyone I come into contact with</p>
+</main>
+
 
 </body>
 </html>
-</main>
