--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,13 +15,12 @@
 </head>
 <body>
 
-
+    <img src="me.jpg" alt="">
 
 <main>
-<img src="me.jpg" alt="">
-<h1>Alex &#128529; Quiroz</h1>
+<h1>Alex Quiroz  (Q)</h1>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, esse?</p>
+<p>Just the average sarcastic goofball designing what I feel like</p>
 
 <h2>Favorite Things</h2>
 <ol>
@@ -30,12 +33,24 @@
 </ol>
 
 <h2>origin story</h2>
-<p>I was an idiot throughout school always doodling and making weird stuff until eventuallly got into college able to use my odd creations in engineering but was unable to apply the technical skills of math and science so i switched over to design and continued to be an idiot but a creative idiot</p>
+<p>I was a bit of an idiot throughout school always doodling and making weird stuff until eventuallly got into college, able to use my odd creations in engineering but was unable to apply the technical skills of math and science so i switched over to design and continued to be an idiot but a creative idiot</p>
 
 <h2>super power</h2>
 <p>The power to confuse anyone I come into contact with</p>
 </main>
 
+
+<div class="grid-container">
+    <div class="grid-item">goofball</div>
+    <div class="grid-item">sarcastic</div>
+    <div class="grid-item">&#10003</div>  
+    <div class="grid-item">native american</div>
+    <div class="grid-item">mexican</div>
+    <div class="grid-item">&#10003</div>  
+    <div class="grid-item">hilarious</div>
+    <div class="grid-item">jokester</div>
+    <div class="grid-item">&#10003</div>  
+  </div>
 
 </body>
 </html>
